# mnist_tf

./: README.md  fingerprint.pb  mnist_train.py  saved_model.pb
app/: CMakeLists.txt  build_android.sh  main.cpp
app/build_android_arm64/: CMakeCache.txt  Makefile  UseModelTrainerApp  cmake_install.cmake
lib/: CMakeLists.txt  ModelTrainer.cpp  ModelTrainer.h  build_android.sh
lib/build_android_arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
mainMNISTModel/: mnist_train.py  nodeLogger.py
mainMNISTModel/<insert your path>/: fingerprint.pb  saved_model.pb
mainMNISTModel/<insert your path>/variables/: variables.data-00000-of-00001  variables.index
pushToDevice/: UseModelTrainerApp  boinc-autodock-vina  model.tflite  test_set.txt  train_set.txt
variables/: variables.data-00000-of-00001  variables.index
